--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,10 @@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Welcome to Gregs Eggs";
 }
 
-<h2>@ViewData["Title"].</h2>
-<h2>Deployment Test</h2>
+<h2>@ViewData["Title"]</h2>
+<h3>GregsEggs.co.uk is a development site for me (Greg) to test ideas in all things web.</h3>
+<p>The site has been created using asp.net 5 on Mac OSX!</p>
+<p>Visual Studio Code has been used for file editing primarily for it's inbuild Git integration</p>
+<p>GitHub has been used for source control and has been configured in VS Code to allow Push directly to the Master Branch</p>
+<p>The site itself is hosted on Azure. Continuous Deployment allows the site to deployed directly from GitHub.</p>
