--- a/Views/Home/Legs.cshtml
+++ b/Views/Home/Legs.cshtml
@@ -1,5 +1,6 @@
 @{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Gregs Legs";
 }
 
 <h2>@ViewData["Title"].</h2>
+<h3>@ViewData["Message"]</h3>
