--- a/Views/Home/Tech.cshtml
+++ b/Views/Home/Tech.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Gregs Tech";
 }
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
